--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campo Minato</title>
-    <link rel="stylesheet" href="myscript.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script type="text/javascript">
+    <main>
+        <div class="tabellone">
+            <div class="square">
+
+            </div>
+        </div>
+    </main>
+
+    <script type="text/javascript" src="mysript.js">
 
     </script>
 </body>
