create basic grid

--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
     <title>Campo Minato</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header>
+        <div>
+            <p>Campo Minato</p>
+        </div>
+        <button id="play_button">
+            Play
+        </button>
+    </header>
     <main>
         <div class="tabellone">
-            <div class="square">
-
-            </div>
+        
         </div>
     </main>
+    <footer>
+        <div>
+            <p>Made with &hearts; by Boolean</p>
+        </div>
+    </footer>
 
-    <script type="text/javascript" src="mysript.js">
+    <script type="text/javascript" src="myscript.js">
 
     </script>
 </body>
