add event listener for play_button. add console log when user click a square

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
         <div>
             <p>Campo Minato</p>
         </div>
-        <button id="play_button">
-            Play
-        </button>
+        <div class="buttons">
+            <p>Difficoltà: </p>
+            <select name="difficulty" id="difficulty_button">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+              </select>
+            <button id="play_button">
+                Play
+            </button>
+        </div>
     </header>
     <main>
         <div class="tabellone">
