--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -25,7 +25,7 @@
             </button>
         </div>
     </header>
-    <main>
+    <main class="main">
         <div class="tabellone">
         
         </div>
